new explore page

--- a/public/about.html
+++ b/public/about.html
@@ -77,67 +77,71 @@
     <button id="dark-mode-toggle" aria-label="Toggle Dark Mode">Dark Mode</button>
   </nav>
 
-  <!-- Subtitle blurb -->
-  <p class="subtitle">Building a Localized Rain Gauge Network for Community Science.</p>
+  <div class="page-container">
+    <!-- Subtitle blurb -->
+    <p class="subtitle">
+      Building a Localized Rain Gauge Network for Community Science.
+    </p>
 
-  <!-- Main content -->
-  <main>
-    <!-- About section -->
-    <h2 id="about-heading">About WaterLogged</h2> <!-- Added id for reference -->
-    <div class="content-box" aria-labelledby="about-heading"> <!-- Added aria-labelledby -->
-      <p>
-        Rainfall data is essential for climate modeling, flood prediction, and infrastructure design, yet much of the nation’s current data collection is conducted manually and without the spatial coverage to measure hyper-local variations. Our team designed a low-cost, automated rain gauge with the capacity to expand the National Weather Service’s current gauge network while inspiring future community scientists.
-      </p>
-    </div>
+    <!-- Main content -->
+    <main>
+      <!-- About section -->
+      <h2 id="about-heading">About WaterLogged</h2> <!-- Added id for reference -->
+      <div class="content-box" aria-labelledby="about-heading"> <!-- Added aria-labelledby -->
+        <p>
+          Rainfall data is essential for climate modeling, flood prediction, and infrastructure design, yet much of the nation’s current data collection is conducted manually and without the spatial coverage to measure hyper-local variations. Our team designed a low-cost, automated rain gauge with the capacity to expand the National Weather Service’s current gauge network while inspiring future community scientists.
+        </p>
+      </div>
 
-    <!-- Team section -->
-    <h2>About WaterLogged: Meet the Team</h2>
-    <div class="team-container"> <!-- Grid container for team boxes -->
-      <div class="team-box" data-name="Charlie" data-blurb="Environmental concentration. Interested in coastal resilience and green development." data-image="images/charlie.png" style="margin-bottom: 20px;">
-        <picture>
-          <source srcset="images/charlie.png" type="image/webp">
-          <img src="images/charlie.png" alt="Charlie - Environmental concentration, interested in coastal resilience and green development" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
-        </picture>
-        <p style="text-align: center; margin-top: 5px; font-weight: bold;">Charlie</p>
+      <!-- Team section -->
+      <h2>About WaterLogged: Meet the Team</h2>
+      <div class="team-container"> <!-- Grid container for team boxes -->
+        <div class="team-box" data-name="Charlie" data-blurb="Environmental concentration. Interested in coastal resilience and green development." data-image="images/charlie.png" style="margin-bottom: 20px;">
+          <picture>
+            <source srcset="images/charlie.png" type="image/webp">
+            <img src="images/charlie.png" alt="Charlie - Environmental concentration, interested in coastal resilience and green development" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+          </picture>
+          <p style="text-align: center; margin-top: 5px; font-weight: bold;">Charlie</p>
+        </div>
+        <div class="team-box" data-name="Annie" data-blurb="Environmental concentration. Interested in green infrastructure and environmental health." data-image="images/annie.jpg" style="margin-bottom: 20px;">
+          <picture>
+            <source srcset="images/annie.jpg" type="image/webp">
+            <img src="images/annie.jpg" alt="Annie - Environmental concentration, interested in green infrastructure and environmental health" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+          </picture>
+          <p style="text-align: center; margin-top: 5px; font-weight: bold;">Annie</p>
+        </div>
+        <div class="team-box" data-name="Peyton" data-blurb="Environmental concentration. Interested in ecology, biology, manufacturing." data-image="images/peyton.jpg" style="margin-bottom: 20px;">
+          <picture>
+            <source srcset="images/peyton.jpg" type="image/webp">
+            <img src="images/peyton.jpg" alt="Peyton - Environmental concentration, interested in ecology, biology, manufacturing" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+          </picture>
+          <p style="text-align: center; margin-top: 5px; font-weight: bold;">Peyton</p>
+        </div>
+        <div class="team-box" data-name="Nava" data-blurb="Health concentration. Interested in BME / Medical Devices. Research." data-image="images/nava.jpg" style="margin-bottom: 20px;">
+          <picture>
+            <source srcset="images/nava.jpg" type="image/webp">
+            <img src="images/nava.jpg" alt="Nava - Health concentration, interested in BME / Medical Devices, Research" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+          </picture>
+          <p style="text-align: center; margin-top: 5px; font-weight: bold;">Nava</p>
+        </div>
+        <div class="team-box" data-name="Will" data-blurb="Environmental concentration. Interested in Biotech, BME, and Materials Science." data-image="images/will.png" style="margin-bottom: 20px;">
+          <picture>
+            <source srcset="images/will.png" type="image/webp">
+            <img src="images/will.png" alt="Will - Environmental concentration, interested in Biotech, BME, and Materials Science" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+          </picture>
+          <p style="text-align: center; margin-top: 5px; font-weight: bold;">Will</p>
+        </div>
       </div>
-      <div class="team-box" data-name="Annie" data-blurb="Environmental concentration. Interested in green infrastructure and environmental health." data-image="images/annie.jpg" style="margin-bottom: 20px;">
-        <picture>
-          <source srcset="images/annie.jpg" type="image/webp">
-          <img src="images/annie.jpg" alt="Annie - Environmental concentration, interested in green infrastructure and environmental health" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
-        </picture>
-        <p style="text-align: center; margin-top: 5px; font-weight: bold;">Annie</p>
-      </div>
-      <div class="team-box" data-name="Peyton" data-blurb="Environmental concentration. Interested in ecology, biology, manufacturing." data-image="images/peyton.jpg" style="margin-bottom: 20px;">
-        <picture>
-          <source srcset="images/peyton.jpg" type="image/webp">
-          <img src="images/peyton.jpg" alt="Peyton - Environmental concentration, interested in ecology, biology, manufacturing" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
-        </picture>
-        <p style="text-align: center; margin-top: 5px; font-weight: bold;">Peyton</p>
-      </div>
-      <div class="team-box" data-name="Nava" data-blurb="Health concentration. Interested in BME / Medical Devices. Research." data-image="images/nava.jpg" style="margin-bottom: 20px;">
-        <picture>
-          <source srcset="images/nava.jpg" type="image/webp">
-          <img src="images/nava.jpg" alt="Nava - Health concentration, interested in BME / Medical Devices, Research" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
-        </picture>
-        <p style="text-align: center; margin-top: 5px; font-weight: bold;">Nava</p>
-      </div>
-      <div class="team-box" data-name="Will" data-blurb="Environmental concentration. Interested in Biotech, BME, and Materials Science." data-image="images/will.png" style="margin-bottom: 20px;">
-        <picture>
-          <source srcset="images/will.png" type="image/webp">
-          <img src="images/will.png" alt="Will - Environmental concentration, interested in Biotech, BME, and Materials Science" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
-        </picture>
-        <p style="text-align: center; margin-top: 5px; font-weight: bold;">Will</p>
-      </div>
-    </div>
-  </main>
+    </main>
+  </div>
 
   <!-- Contact footer -->
   <footer>
     Learn more about <a href="https://www.bc.edu/bc-web/schools/morrissey/departments/engineering.html" target="_blank">Boston College Human-Centered Engineering</a>.
   </footer>
 
-  <!-- Rebuilt modal structure -->
-  <div class="modal" id="team-modal" style="display: none;">
+  <!-- Modal structure -->
+  <div class="modal" id="team-modal">
     <div class="modal-content">
       <button class="modal-close" id="modal-close">&times;</button>
       <img id="modal-image" alt="Team Member Image" />
@@ -146,34 +150,7 @@
     </div>
   </div>
 
-  <!-- JavaScript for menu toggle and dark mode -->
-  <script defer src="/js/main.js"></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-        const menuButton = document.getElementById('menu-button');
-        const menu = document.getElementById('menu');
-        if (menuButton && menu) {
-            menuButton.addEventListener('click', () => {
-                menu.classList.toggle('hidden');
-                menu.style.display = menu.classList.contains('hidden') ? 'none' : 'block';
-                menu.setAttribute('aria-hidden', menu.classList.contains('hidden'));
-            });
-        } else {
-            console.error('Menu button or menu element not found.');
-        }
-
-        const darkModeToggle = document.getElementById('dark-mode-toggle');
-        if (darkModeToggle) {
-            darkModeToggle.addEventListener('click', () => {
-                document.body.classList.toggle('dark-mode');
-                document.querySelectorAll('header, nav, .content-box').forEach(el => {
-                    el.classList.toggle('dark-mode');
-                });
-            });
-        } else {
-            console.error('Dark mode toggle button not found.');
-        }
-    });
-  </script>
+  <!-- JavaScript -->
+  <script src="js/main.js"></script>
 </body>
 </html>
