new explore page and a bunch of cool features

--- a/public/explore.html
+++ b/public/explore.html
@@ -48,6 +48,7 @@
   <meta name="description" content="Explore interactive weather games and activities with WaterLogged. Learn about rainfall, weather patterns, and climate science through engaging games.">
   <meta name="keywords" content="WaterLogged, weather games, educational activities, rain gauge, community science, climate education">
   <meta name="author" content="WaterLogged Team">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
   <!-- Navigation menu -->
@@ -77,6 +78,12 @@
 
     <!-- Main content -->
     <main>
+      <!-- Interactive Rainfall Visualization -->
+      <h2 id="rainfall-viz-heading">Interactive Rainfall Data</h2>
+      <div class="content-box data-viz-box" aria-labelledby="rainfall-viz-heading">
+        <canvas id="rainfallChart"></canvas>
+      </div>
+
       <!-- Weather Detective Game Section -->
       <h2 id="weather-detective-heading">Weather Detective</h2>
       <div class="content-box game-box" aria-labelledby="weather-detective-heading">
