--- a/public/index.html
+++ b/public/index.html
@@ -126,6 +126,7 @@
       <li><a href="index.html" aria-label="Go to Home page">Home</a></li>
       <li><a href="about.html" aria-label="Go to About page">About</a></li>
       <li><a href="photos.html" aria-label="Go to Photos page">Photos</a></li>
+      <li><a href="explore.html" aria-label="Go to Explore page">Explore</a></li>
     </ul>
     <span class="toolbar-title" aria-hidden="true">WATERLOGGED</span>
     <button id="dark-mode-toggle" aria-label="Toggle Dark Mode">Dark Mode</button>
