--- a/public/photos.html
+++ b/public/photos.html
@@ -64,10 +64,11 @@
       <span></span>
       <span></span>
     </button>
-    <ul id="menu" class="hidden" aria-hidden="true"> <!-- Added aria-hidden -->
-      <li><a href="index.html" aria-label="Go to Home page">Home</a></li> <!-- Added aria-label -->
-      <li><a href="about.html" aria-label="Go to About page">About</a></li> <!-- Added aria-label -->
-      <li><a href="photos.html" aria-label="Go to Photos page">Photos</a></li> <!-- Added aria-label -->
+    <ul id="menu" class="hidden" aria-hidden="true">
+      <li><a href="index.html" aria-label="Go to Home page">Home</a></li>
+      <li><a href="about.html" aria-label="Go to About page">About</a></li>
+      <li><a href="photos.html" aria-label="Go to Photos page">Photos</a></li>
+      <li><a href="explore.html" aria-label="Go to Explore page">Explore</a></li>
     </ul>
     <span class="toolbar-title" aria-hidden="true">WATERLOGGED</span> <!-- Marked as decorative -->
     <button id="dark-mode-toggle" aria-label="Toggle Dark Mode">Dark Mode</button> <!-- Dark mode toggle button -->
