wait this is where all the big stuff is actually

--- a/public/about.html
+++ b/public/about.html
@@ -81,7 +81,7 @@
   <div class="page-container">
     <!-- Subtitle blurb -->
     <p class="subtitle">
-      Building a Localized Rain Gauge Network for Community Science.
+      Learn More About the Waterlogged Project and Our Wonderful Team.
     </p>
 
     <!-- Main content -->
