--- a/public/photos.html
+++ b/public/photos.html
@@ -41,6 +41,22 @@
       margin: 20px auto;
       max-width: 600px;
     }
+    /* Added specific styles to ensure footer stays at bottom */
+    .page-container {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    main {
+      flex: 1;
+    }
+    footer {
+      margin-top: auto;
+      width: 100%;
+    }
   </style>
   <link rel="stylesheet" href="css/styles.css" media="print" onload="this.media='all'">
   <noscript><link rel="stylesheet" href="css/styles.css"></noscript>
@@ -59,11 +75,13 @@
 <body>
   <!-- Navigation menu -->
   <nav>
-    <button id="menu-button" aria-label="Toggle navigation menu"> <!-- Added aria-label -->
-      <span></span>
-      <span></span>
-      <span></span>
-    </button>
+    <div id="menu-container" style="position: relative; z-index: 1100;">
+      <button id="menu-button" aria-label="Toggle navigation menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+    </div>
     <ul id="menu" class="hidden" aria-hidden="true">
       <li><a href="index.html" aria-label="Go to Home page">Home</a></li>
       <li><a href="about.html" aria-label="Go to About page">About</a></li>
@@ -77,7 +95,7 @@
   <div class="page-container">
     <!-- Subtitle blurb -->
     <p class="subtitle">
-      Building a Localized Rain Gauge Network for Community Science.
+      Enjoy Some Pictures from the Waterlogged Project.
     </p>
 
     <!-- Main content -->
